; ModuleID = '/home/carl/AnghaBench/php-src/ext/com_dotnet/extr_com_com.c_php_com_do_invoke.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/com_dotnet/extr_com_com.c_php_com_do_invoke.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [26 x i8] c"Unable to lookup `%s': %s\00", align 1
@FAILURE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @php_com_do_invoke(i32* %0, i8* %1, i64 %2, i32 %3, i32* %4, i32 %5, i32* %6, i32 %7) #0 {
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i64, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32*, align 8
  %15 = alloca i32, align 4
  %16 = alloca i32*, align 8
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  %20 = alloca i8*, align 8
  %21 = alloca i8*, align 8
  store i32* %0, i32** %10, align 8
  store i8* %1, i8** %11, align 8
  store i64 %2, i64* %12, align 8
  store i32 %3, i32* %13, align 4
  store i32* %4, i32** %14, align 8
  store i32 %5, i32* %15, align 4
  store i32* %6, i32** %16, align 8
  store i32 %7, i32* %17, align 4
  store i8* null, i8** %20, align 8
  %22 = load i32*, i32** %10, align 8
  %23 = load i8*, i8** %11, align 8
  %24 = load i64, i64* %12, align 8
  %25 = call i32 @php_com_get_id_of_name(i32* %22, i8* %23, i64 %24, i32* %18)
  store i32 %25, i32* %19, align 4
  %26 = load i32, i32* %19, align 4
  %27 = call i64 @FAILED(i32 %26)
  %28 = icmp ne i64 %27, 0
  br i1 %28, label %29, label %43

29:                                               ; preds = %8
  %30 = load i32, i32* %19, align 4
  %31 = call i8* @php_win32_error_to_msg(i32 %30)
  store i8* %31, i8** %21, align 8
  %32 = load i8*, i8** %11, align 8
  %33 = load i8*, i8** %21, align 8
  %34 = call i32 @spprintf(i8** %20, i32 0, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0), i8* %32, i8* %33)
  %35 = load i8*, i8** %21, align 8
  %36 = call i32 @php_win32_error_msg_free(i8* %35)
  %37 = load i32, i32* %19, align 4
  %38 = load i8*, i8** %20, align 8
  %39 = call i32 @php_com_throw_exception(i32 %37, i8* %38)
  %40 = load i8*, i8** %20, align 8
  %41 = call i32 @efree(i8* %40)
  %42 = load i32, i32* @FAILURE, align 4
  store i32 %42, i32* %9, align 4
  br label %52

43:                                               ; preds = %8
  %44 = load i32*, i32** %10, align 8
  %45 = load i32, i32* %18, align 4
  %46 = load i32, i32* %13, align 4
  %47 = load i32*, i32** %14, align 8
  %48 = load i32, i32* %15, align 4
  %49 = load i32*, i32** %16, align 8
  %50 = load i32, i32* %17, align 4
  %51 = call i32 @php_com_do_invoke_by_id(i32* %44, i32 %45, i32 %46, i32* %47, i32 %48, i32* %49, i32 0, i32 %50)
  store i32 %51, i32* %9, align 4
  br label %52

52:                                               ; preds = %43, %29
  %53 = load i32, i32* %9, align 4
  ret i32 %53
}

declare dso_local i32 @php_com_get_id_of_name(i32*, i8*, i64, i32*) #1

declare dso_local i64 @FAILED(i32) #1

declare dso_local i8* @php_win32_error_to_msg(i32) #1

declare dso_local i32 @spprintf(i8**, i32, i8*, i8*, i8*) #1

declare dso_local i32 @php_win32_error_msg_free(i8*) #1

declare dso_local i32 @php_com_throw_exception(i32, i8*) #1

declare dso_local i32 @efree(i8*) #1

declare dso_local i32 @php_com_do_invoke_by_id(i32*, i32, i32, i32*, i32, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
